fix frontpage layout bug, update frontpage title, increase margin between projects, added french quote to make links clearer

--- a/components/PortfolioProject/PortfolioProject.module.scss
+++ b/components/PortfolioProject/PortfolioProject.module.scss
@@ -4,7 +4,7 @@
 .containerDiv {
     max-width: 1050px;
     margin: 0 auto;
-    margin-bottom: 40px;
+    margin-bottom: 120px;
     
     
     
